third_party/move/move-compiler-v2/tests/checking/typing/constant_non_base_type.exp

Diagnostics:
error: Not a valid constant expression.
  ┌─ tests/checking/typing/constant_non_base_type.move:3:22
  │
3 │     const C1: &u64 = &0;
  │                      ^^
  │                      │
  │                      Invalid call or operation in constant

error: mutability mismatch (&mut != &)
  ┌─ tests/checking/typing/constant_non_base_type.move:4:26
  │
4 │     const C2: &mut u64 = &0;
  │                          ^^

error: Not a valid constant expression.
  ┌─ tests/checking/typing/constant_non_base_type.move:4:26
  │
4 │     const C2: &mut u64 = &0;
  │                          ^^
  │                          │
  │                          Invalid call or operation in constant
